add jwtAuth for GET users/ route, add functionality in getPostByUser method in posts.controller.js, create getByUserId in posts.model.js to return posts of spefic user, if no post return expection and update swagger for GET posts/ and config jwt
