# src/features/posts/posts.router.js
@@ -1,11 +1,12 @@
 import express from "express";
+import jwtAuth from "../../middlewares/jwtAuth.middleware.js"
 
 import PostsController from "./posts.controller.js";
 
 const router = express.Router();
 const postsController = new PostsController();
 
-router.get("/", postsController.getPostByUser);
+router.get("/", jwtAuth, postsController.getPostByUser);
 router.get("/all", postsController.getAllPosts);
 router.get("/:id", postsController.getPostById);
 router.post("/", postsController.createPost);
